--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <td><img src = "https://media.licdn.com/dms/image/C4D03AQEMTKur1qJj_g/profile-displayphoto-shrink_800_800/0/1654620989379?e=1680739200&v=beta&t=RAsp88hNBmCqudM7UDGku6giXd15D0lKkKmKkxXDGXQ"  width="250" 
                 height="250"alt = "Dev's profile picture"></td>
                 <td><h1>Dhrruva Dev Nikhil</h1>
-                    <em><p>Engineering Student</p></em>
+                    <em><p>Engineering Student</p></em><br>
                     <p><em>Dayananda Sagar University</em></p><a href = "Contact details.html">Contact Details</a></td>
         </tr>
     </table>
